# RL78_SmartConfigurator_examples_RL78FPB_LLVMRL78

./: .gitignore
00_SimDebuggerConsole_printf/rl78g23_64p_fpb/: .cproject  .gitignore  .project  CMakeLists.txt  SimDebugerConsole_printf RenesasSim.launch  SimDebugerConsole_printf RenesasSimDebug.launch  SimDebuggerConsole_printf RenesasSimDebug.launch  SmartConfigurator.scfg
00_SimDebuggerConsole_printf/rl78g23_64p_fpb/cmake/: renesas-rl78-clang-toolchain.cmake
00_SimDebuggerConsole_printf/rl78g23_64p_fpb/src/: rl78g23_fpb_main.cpp  rl78g23fpbdef.h
00_SimDebuggerConsole_printf/rl78g23_64p_fpb/src/smc_integration/: syscall.c  (+2 more)
10_SerialConsole_printf/rl78g23_64p_fpb/: .cproject  .project  CMakeLists.txt  SerialConsole_printf Build,Prog,Run.launch
10_SerialConsole_printf/rl78g23_64p_fpb/src/: rl78g23_fpb_main.cpp
20_SerialConsole_getchar/rl78g23_64p_fpb/: .cproject  .project  CMakeLists.txt  SerialConsole_getchar Build,Prog,Run.launch  SmartConfigurator.scfg
20_SerialConsole_getchar/rl78g23_64p_fpb/src/: rl78g23_fpb_main.cpp
20_SerialConsole_getchar/rl78g23_64p_fpb/src/FreeRTOS/Source/portable/GCC/RL78/: port.c
20_SerialConsole_getchar/rl78g23_64p_fpb/src/frtos_startup/: freertos_helper.c  freertos_stack.h
20_SerialConsole_getchar/rl78g23_64p_fpb/src/smc_gen/general/: r_cg_port.h  r_smc_entry.h
20_SerialConsole_getchar/rl78g23_64p_fpb/src/smc_gen/r_config/: r_bsp_config.h
20_SerialConsole_getchar/rl78g23_64p_fpb/src/smc_integration/: syscall.c
21_SerialConsole_getchar_ready/rl78g23_64p_fpb/: .project  CMakeLists.txt  SerialConsole_getchar_ready Build,Prog,Run.launch  SmartConfigurator.scfg
21_SerialConsole_getchar_ready/rl78g23_64p_fpb/src/: linker_script.ld  rl78g23_fpb_main.cpp
30_UART_Printf/rl78g23_64p_fpb/: .cproject  .project  CMakeLists.txt  SmartConfigurator.scfg  UART_Printf HardwareDebug.launch
30_UART_Printf/rl78g23_64p_fpb/src/: rl78g23_fpb_main.cpp
40_UART_Getchar/rl78g23_64p_fpb/: .project  CMakeLists.txt  SmartConfigurator.scfg  UART_Getchar HardwareDebug.launch
40_UART_Getchar/rl78g23_64p_fpb/cmake/: renesas-rl78-clang-toolchain.cmake
40_UART_Getchar/rl78g23_64p_fpb/src/: Config_ext.h  rl78g23_fpb_main.cpp
41_UART_Getchar_Ready/rl78g23_64p_fpb/: .cproject  .project  CMakeLists.txt  UART_Getchar_Ready HardwareDebug.launch
41_UART_Getchar_Ready/rl78g23_64p_fpb/src/: rl78g23_fpb_main.cpp
(+76 files in other folders)
